Fix menu alignment.

--- a/content/styles/main.scss
+++ b/content/styles/main.scss
@@ -88,7 +88,7 @@ header {
       font-family: $font-title;
       letter-spacing: .5px;
       display: inline;
-      margin-right: 2em;
+      margin-right: 1.6em;
 
       a {
         color: $color-main;
